add_subdirectory(Nodes)
add_subdirectory(Utility)
add_subdirectory(Events)
add_subdirectory(Tilemap)
add_subdirectory(DungeonManager)
add_subdirectory(Graphics)

add_executable(epic_dungeon main.cpp)
target_include_directories(epic_dungeon PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(epic_dungeon PUBLIC SFML::Graphics Nodes Events DungeonManager Utility Tilemap Animation Background)